32 fix layout on mobile (#34)

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -341,6 +341,7 @@ nav {
     padding: 1rem 2rem;
     transition: color, padding 0.5s ease-in-out;
     font-weight: lighter;
+    pointer-events: all;
 }
 
 .timeline-entry.active {
@@ -353,10 +354,6 @@ nav {
     font-family: "Fraunces";
     font-size: 3rem;
     transition: font-size 0.5s ease-in-out;
-}
-
-.timeline-entry .entry-icon {
-    padding: 8px;
 }
 
 .timeline-entry.active .entry-description {
@@ -389,9 +386,6 @@ button:hover {
     border-bottom: 1px black;
     margin-left: 2rem;
     pointer-events: auto;
-}
-
-.timeline-header {
     position: sticky;
     font-size: 1.4rem;
 }
@@ -484,6 +478,29 @@ input[type=file]::file-selector-button:hover {
     border-radius: 8px;
     padding: 8px;
     background: #3b3b3bbf;
-    color: var(--color-text-white);
-    box-shadow: none;
+    color: white;
+}
+
+@media (max-width: 800px) {
+    .timeline-entry .entry-description {
+        font-size: 1.2rem;
+        font-weight: normal;
+    }
+
+    .timeline-entry {
+        font-size: 1rem;
+        color: white;
+    }
+
+    .timeline-entry.active {
+        color: wheat;
+    }
+
+    .timeline-entry.active .entry-description {
+        font-size: 2rem;
+    }
+
+    .timeline {
+        width: 90%;
+    }
 }
